--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Client/Views/NhanVienYTe/EditKQHM.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Client/Views/NhanVienYTe/EditKQHM.cshtml
@@ -1,24 +1,10 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "EditKQHM";
     Layout = "~/Areas/Client/Views/Shared/_Layout.cshtml";
+
 }
 
-<section class="breadcrumb_part breadcrumb_bg">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="breadcrumb_iner">
-                    <div class="breadcrumb_iner_item">
-                        <h2>Thông tin cá nhân</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- breadcrumb start-->
-<!--================Blog Area =================-->
 <section class="blog_area section_padding">
     <div class="container">
         <div class="row">
@@ -129,13 +115,13 @@
                                         </th>
                                     </table>
 
-                                
+
                                     <div class="mt-10">
                                         <input type="email" name="EMAIL" placeholder=" Địa chỉ tạm trú"
                                                onfocus="this.placeholder = ''" onblur="this.placeholder = ' Địa chỉ tạm trú'" required
                                                class="single-input">
-                                    </div>                             
-                                  
+                                    </div>
+
                                     <div class="mt-10">
                                         <textarea class="single-textarea" placeholder="Ghi chú khác" onfocus="this.placeholder = ''"
                                                   onblur="this.placeholder = 'Message'" required></textarea>
@@ -159,66 +145,3 @@
 </section>
 
 
-
-@*<ul class="list cat-list">
-        <li>
-            <a href="#" class="d-flex">
-                <p>Cập nhật thông tin</p>
-            </a>
-        </li>
-        <li>
-            <a href="#" class="d-flex">
-                <p>Xem lịch sử</p>
-            </a>
-        </li>
-        <li>
-            <a href="#" class="d-flex">
-                <p>Xem tình trạng sức khỏe</p>
-            </a>
-        </li>
-        <li>
-            <a href="#" class="d-flex">
-                <p>Đổi mật khẩu</p>
-            </a>
-        </li>
-    </ul>*@
-
-@*<div class="input-group-icon mt-10">
-        <div class="icon"><i class="fa fa-plane" aria-hidden="true"></i></div>
-        <div class="form-select" id="default-select_1">
-            <select>
-                <option value=" 1">Nhóm máu</option>
-                <option value="1">Chưa biết</option>
-                <option value="1">A</option>
-                <option value="1">B</option>
-                <option value="1">AB</option>
-                <option value="1">0</option>
-            </select>
-        </div>
-    </div>*@
-
-@*<div class="mt-10">
-        <input type="text" name="first_name" placeholder="Họ và tên"
-               onfocus="this.placeholder = ''" onblur="this.placeholder = 'Họ và tên'" required
-               class="single-input">
-    </div>
-    <div class="mt-10">
-        <input type="text" name="last_name" placeholder="Số điện thoại"
-               onfocus="this.placeholder = ''" onblur="this.placeholder = 'Số điện thoại '" required
-               class="single-input">
-    </div>
-    <div class="mt-10">
-        <input type="email" name="EMAIL" placeholder="Email address"
-               onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email '" required
-               class="single-input">
-    </div>
-    <div class="mt-10">
-        <input type="text" name="last_name" placeholder="CMND / CCCD"
-               onfocus="this.placeholder = ''" onblur="this.placeholder = ' CMND / CCCD'" required
-               class="single-input">
-    </div>
-    <div class="mt-10">
-        <input type="date" name="last_name" placeholder="CMND / CCCD"
-               onfocus="this.placeholder = ''" onblur="this.placeholder = ' Ngày sinh'" required
-               class="single-input" for="datepicker">
-    </div>*@
