--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Client/Views/DotHienMauClient/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Client/Views/DotHienMauClient/Index.cshtml
@@ -212,7 +212,7 @@
                     <aside class="single_sidebar_widget popular_post_widget">
                         <h3 class="widget_title">Thông tin khác</h3>
                         <div class="media post_item">
-                            <img src="~/Assets/client/img/post/post_1.png" alt="post">
+                            <img src="~/Assets/client/img/post/post_9.png" alt="post">
                             <div class="media-body">
                                 <a href="single-blog.html">
                                     <h3>From life was you fish...</h3>
@@ -221,7 +221,7 @@
                             </div>
                         </div>
                         <div class="media post_item">
-                            <img src="~/Assets/client/img/post/post_2.png" alt="post">
+                            <img src="~/Assets/client/img/post/post_7.png" alt="post">
                             <div class="media-body">
                                 <a href="single-blog.html">
                                     <h3>The Amazing Hubble</h3>
@@ -230,7 +230,7 @@
                             </div>
                         </div>
                         <div class="media post_item">
-                            <img src="~/Assets/client/img/post/post_3.png" alt="post">
+                            <img src="~/Assets/client/img/post/post_4.png" alt="post">
                             <div class="media-body">
                                 <a href="single-blog.html">
                                     <h3>Astronomy Or Astrology</h3>
@@ -239,7 +239,7 @@
                             </div>
                         </div>
                         <div class="media post_item">
-                            <img src="~/Assets/client/img/post/post_4.png" alt="post">
+                            <img src="~/Assets/client/img/post/post_1.png" alt="post">
                             <div class="media-body">
                                 <a href="single-blog.html">
                                     <h3>Asteroids telescope</h3>
@@ -253,32 +253,32 @@
                         <ul class="instagram_row flex-wrap">
                             <li>
                                 <a href="#">
-                                    <img class="img-fluid" src="~/Assets/client/img/post/post_5.png" alt="">
+                                    <img class="img-fluid" src="~/Assets/client/hm/hm6.jpg" alt="">
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img class="img-fluid" src="~/Assets/client/img/post/post_6.png" alt="">
+                                    <img class="img-fluid" src="~/Assets/client/hm/hm4.jpg" alt="">
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img class="img-fluid" src="~/Assets/client/img/post/post_7.png" alt="">
+                                    <img class="img-fluid" src="~/Assets/client/hm/hm2.jpg" alt="">
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img class="img-fluid" src="~/Assets/client/img/post/post_8.png" alt="">
+                                    <img class="img-fluid" src="~/Assets/client/hm/hm5.jpg" alt="">
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img class="img-fluid" src="~/Assets/client/img/post/post_9.png" alt="">
+                                    <img class="img-fluid" src="~/Assets/client/hm/hm1.jpg" alt="">
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img class="img-fluid" src="~/Assets/client/img/post/post_10.png" alt="">
+                                    <img class="img-fluid" src="~/Assets/client/hm/hm1.jpg" alt="">
                                 </a>
                             </li>
                         </ul>
