--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Client/Views/NguoiDung/_leftMenu1.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Client/Views/NguoiDung/_leftMenu1.cshtml
@@ -1,18 +1,14 @@
 ﻿
+
 <div class="blog_right_sidebar">
-    <aside class="single_sidebar_widget post_category_widget">
-        <h4 class="widget_title">Cá nhân</h4>
-        <ul class="list cat-list">
-            @{
-                var session = (HiemMauNhanDao.Common.UserLogin)Session[HiemMauNhanDao.Common.CommonConstant.USER_SESSION];
-            }
-            @if (session.AuthorID == "Q03")
-            {
-                <li>
-                    <a href="#" class="d-flex">
-                        <p>Cập nhật thông tin</p>
-                    </a>
-                </li>
+    @{
+        var session = (HiemMauNhanDao.Common.UserLogin)Session[HiemMauNhanDao.Common.CommonConstant.USER_SESSION];
+    }
+    @if (session.AuthorID == "Q03")
+    {<aside class="single_sidebar_widget post_category_widget">
+            <h4 class="widget_title">Đơn vị</h4>
+            <ul class="list cat-list">
+
                 <li>
                     <a href="#" class="d-flex">
                         <p>Cập nhật thông đơn vị</p>
@@ -31,6 +27,95 @@
                 <li>
                     <a href="#" class="d-flex">
                         <p>Xác nhận yêu cầu</p>
+                    </a>
+                </li>
+            </ul>
+        </aside>
+        <aside class="single_sidebar_widget post_category_widget">
+            <h4 class="widget_title">Cá nhân</h4>
+            <ul class="list cat-list">
+                <li>
+                    <a href="#" class="d-flex">
+                        <p>Xem lịch sử</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="d-flex">
+                        <p>Tình trạng sức khỏe</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="d-flex">
+                        <p>Đổi mật khẩu</p>
+                    </a>
+                </li>
+            </ul>
+        </aside>
+    }
+    @if (session.AuthorID == "Q04")
+    {<aside class="single_sidebar_widget post_category_widget">
+            <h4 class="widget_title">Bệnh viện</h4>
+            <ul class="list cat-list">
+                <li>
+                    <a href="/Client/NhanVienYTe/EditBV" class="d-flex">
+                        <p>Cập nhật thông đơn vị</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Client/NhanVienYTe/CeateNVYT" class="d-flex">
+                        <p>Cập nhật nhân viên</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="d-flex">
+                        <p>Đăng ký đợt hiến máu</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Client/NhanVienYTe/DangBai" class="d-flex">
+                        <p>Đăng bài</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="d-flex">
+                        <p>Xác nhận yêu cầu</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Client/NhanVienYTe/Index" class="d-flex">
+                        <p>Cập nhật Kết quả hiến máu</p>
+                    </a>
+                </li>
+
+            </ul>
+        </aside>
+       
+    }
+    @if (session.AuthorID == "Q05")
+    {
+        <aside class="single_sidebar_widget post_category_widget">
+            <h4 class="widget_title">Nhân viên y tế</h4>
+            <ul class="list cat-list">
+
+                <li>
+                    <a href="/Client/NhanVienYTe/Index" class="d-flex">
+                        <p>Cập nhật Kết quả hiến máu</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="d-flex">
+                        <p>Xem nhiệm vụ</p>
+                    </a>
+                </li>
+
+            </ul>
+        </aside>
+        <aside class="single_sidebar_widget post_category_widget">
+            <h4 class="widget_title">Cá nhân</h4>
+            <ul class="list cat-list">
+                <li>
+                    <a href="#" class="d-flex">
+                        <p>Cập nhật thông tin</p>
                     </a>
                 </li>
                 <li>
@@ -48,95 +133,14 @@
                         <p>Đổi mật khẩu</p>
                     </a>
                 </li>
-            }
-
-            @if (session.AuthorID == "Q04")
-            {
-
-                <li>
-                    <a href="#" class="d-flex">
-                        <p>Cập nhật thông tin</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="d-flex">
-                        <p>Đăng ký đợt hiến máu</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="d-flex">
-                        <p>Đăng bài</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="d-flex">
-                        <p>Tạo tài khoản NV</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="d-flex">
-                        <p>Xác nhận yêu cầu</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="d-flex">
-                        <p>Cập nhật Kết quả hiến máu</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="d-flex">
-                        <p>Cập nhật thông đơn vị</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="d-flex">
-                        <p>Xem lịch sử</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="d-flex">
-                        <p>Xem tình trạng sức khỏe</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="d-flex">
-                        <p>Đổi mật khẩu</p>
-                    </a>
-                </li>
-            }
-            @if (session.AuthorID == "Q05")
-            {
-
-                <li>
-                    <a href="#" class="d-flex">
-                        <p>Cập nhật thông tin</p>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#" class="d-flex">
-                        <p>Cập nhật Kết quả hiến máu</p>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#" class="d-flex">
-                        <p>Xem lịch sử</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="d-flex">
-                        <p>Xem tình trạng sức khỏe</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="d-flex">
-                        <p>Đổi mật khẩu</p>
-                    </a>
-                </li>
-            }
-            @if (session.AuthorID == "Q06")
-            {
+            </ul>
+        </aside>
+    }
+    @if (session.AuthorID == "Q06")
+    {
+        <aside class="single_sidebar_widget post_category_widget">
+            <h4 class="widget_title">Cá nhân</h4>
+            <ul class="list cat-list">
                 <li>
                     <a href="#" class="d-flex">
                         <p>Cập nhật thông tin</p>
@@ -158,10 +162,10 @@
                         <p>Đổi mật khẩu</p>
                     </a>
                 </li>
-            }
+            </ul>
+        </aside>
+    }
 
-
-        </ul>
-
-    </aside>
 </div>
+
+
