--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Client/Views/NhanVienYTe/DangBai.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Client/Views/NhanVienYTe/DangBai.cshtml
@@ -1,52 +1,118 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "DangBai";
     Layout = "~/Areas/Client/Views/Shared/_Layout.cshtml";
 }
-
 <section class="breadcrumb_part breadcrumb_bg">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
                     <div class="breadcrumb_iner_item">
-                        <h2>Thông tin cá nhân</h2>
+                        <h2>Nhân viên y tế</h2>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<!-- breadcrumb start-->
-<!--================Blog Area =================-->
+
 <section class="blog_area section_padding">
     <div class="container">
         <div class="row">
             <div class="col-lg-4">
-                @RenderPage("_leftMenu1.cshtml")
-            </div>
+                <div class="blog_right_sidebar">
+                    <aside class="single_sidebar_widget post_category_widget">
+                        <h4 class="widget_title">Bệnh viện</h4>
+                        <ul class="list cat-list">
+                            <li>
+                                <a href="/Client/NhanVienYTe/EditBV" class="d-flex">
+                                    <p>Cập nhật thông đơn vị</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/Client/NhanVienYTe/CeateNVYT" class="d-flex">
+                                    <p>Cập nhật nhân viên</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="d-flex">
+                                    <p>Đăng ký đợt hiến máu</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/Client/NhanVienYTe/DangBai" class="d-flex">
+                                    <p>Đăng bài</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="d-flex">
+                                    <p>Xác nhận yêu cầu</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/Client/NhanVienYTe/Index" class="d-flex">
+                                    <p>Cập nhật Kết quả hiến máu</p>
+                                </a>
+                            </li>
 
+                        </ul>
+                    </aside>
+                </div>
+            </div>
             <div class="col-lg-8 mb-5 mb-lg-0">
                 <div class="blog_left_sidebar">
                     <div class="section-top-border">
                         <div class="row">
                             <div class="col-lg-12 col-md-8">
-                                <h3 class="mb-30">Vui lòng điền đầy đủ thông tin</h3>
+                                <h3 class="mb-30">Đăng bài</h3>
                                 <form action="#">
                                     <table class="mt-10">
                                         <th style="width:400px">
                                             <div>
+                                                <label>Họ và tên </label>
                                                 <input type="text" name="first_name" placeholder="Họ và tên"
-                                                       onfocus="this.placeholder = ''" onblur="this.placeholder = 'Họ và tên'" required
+                                                       onfocus="this.placeholder = ''" onblur="this.placeholder = 'Tên đợt hiến máu'" required
                                                        class="single-input">
                                             </div>
                                         </th>
                                         <th class="col-lg-6">
+                                            <label>Thời gian bắt đầu </label>
+                                            <input type="date" name="last_name" placeholder="Thời gian bắt đầu "
+                                                   onfocus="this.placeholder = ''" onblur="this.placeholder = ' Thời gian bắt đầu'" required
+                                                   class="single-input" for="datepicker">
+                                        </th>
+                                    </table>
+                                    <table class="mt-10">
+                                        <th style="width:400px">
                                             <div>
-                                                <input type="text" name="last_name" placeholder="Số điện thoại"
-                                                       onfocus="this.placeholder = ''" onblur="this.placeholder = 'Số điện thoại '" required
+                                                <label>Số lượng </label>
+                                                <input type="text" name="first_name" placeholder="Số lượng"
+                                                       onfocus="this.placeholder = ''" onblur="this.placeholder = 'Tên đợt hiến máu'" required
                                                        class="single-input">
                                             </div>
+                                        </th>
+                                        <th class="col-lg-6">
+                                            <label>Thời gian kết thúc </label>
+                                            <input type="date" name="last_name" placeholder="Thời gian kết thúc "
+                                                   onfocus="this.placeholder = ''" onblur="this.placeholder = ' Thời gian bắt đầu'" required
+                                                   class="single-input" for="datepicker">
+                                        </th>
+                                    </table>
+                                    <table class="mt-10">
+                                        <th style="width:400px">
+                                            <div>
+                                                <label>Số lượng </label>
+                                                <input type="text" name="first_name" placeholder="Họ và tên"
+                                                       onfocus="this.placeholder = ''" onblur="this.placeholder = 'Tên đợt hiến máu'" required
+                                                       class="single-input">
+                                            </div>
+                                        </th>
+                                        <th class="col-lg-6">
+                                            <label>Ngày  </label>
+                                            <input type="datetime-local" name="datetimepicker2" id="datetimepicker2" placeholder="Thời gian bắt đầu "
+                                                   onfocus="this.placeholder = ''" onblur="this.placeholder = ' Thời gian bắt đầu'" required
+                                                   class="single-input" for="datepicker">
                                         </th>
                                     </table>
                                     <table class="mt-10">
@@ -155,69 +221,6 @@
 
         </div>
     </div>
+    
 </section>
 
-
-
-@*<ul class="list cat-list">
-        <li>
-            <a href="#" class="d-flex">
-                <p>Cập nhật thông tin</p>
-            </a>
-        </li>
-        <li>
-            <a href="#" class="d-flex">
-                <p>Xem lịch sử</p>
-            </a>
-        </li>
-        <li>
-            <a href="#" class="d-flex">
-                <p>Xem tình trạng sức khỏe</p>
-            </a>
-        </li>
-        <li>
-            <a href="#" class="d-flex">
-                <p>Đổi mật khẩu</p>
-            </a>
-        </li>
-    </ul>*@
-
-@*<div class="input-group-icon mt-10">
-        <div class="icon"><i class="fa fa-plane" aria-hidden="true"></i></div>
-        <div class="form-select" id="default-select_1">
-            <select>
-                <option value=" 1">Nhóm máu</option>
-                <option value="1">Chưa biết</option>
-                <option value="1">A</option>
-                <option value="1">B</option>
-                <option value="1">AB</option>
-                <option value="1">0</option>
-            </select>
-        </div>
-    </div>*@
-
-@*<div class="mt-10">
-        <input type="text" name="first_name" placeholder="Họ và tên"
-               onfocus="this.placeholder = ''" onblur="this.placeholder = 'Họ và tên'" required
-               class="single-input">
-    </div>
-    <div class="mt-10">
-        <input type="text" name="last_name" placeholder="Số điện thoại"
-               onfocus="this.placeholder = ''" onblur="this.placeholder = 'Số điện thoại '" required
-               class="single-input">
-    </div>
-    <div class="mt-10">
-        <input type="email" name="EMAIL" placeholder="Email address"
-               onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email '" required
-               class="single-input">
-    </div>
-    <div class="mt-10">
-        <input type="text" name="last_name" placeholder="CMND / CCCD"
-               onfocus="this.placeholder = ''" onblur="this.placeholder = ' CMND / CCCD'" required
-               class="single-input">
-    </div>
-    <div class="mt-10">
-        <input type="date" name="last_name" placeholder="CMND / CCCD"
-               onfocus="this.placeholder = ''" onblur="this.placeholder = ' Ngày sinh'" required
-               class="single-input" for="datepicker">
-    </div>*@
