--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Client/Views/Shared/_Layout.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Client/Views/Shared/_Layout.cshtml
@@ -26,6 +26,13 @@
     <link rel="stylesheet" href="~/Assets/client/css/slick.css">
     <!-- style CSS -->
     <link rel="stylesheet" href="~/Assets/client/css/style.css">
+
+    @*<link href="https://cdn.jsdelivr.net/npm/pixeden-stroke-7-icon@1.2.3/pe-icon-7-stroke/dist/pe-icon-7-stroke.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="~/Assets/Admin/css/main.css" rel="stylesheet">
+    <link href="~/FileUpLoad">
+    <link rel="icon" href="~/Assets/Login/img/favoicon.png">*@
 </head>
 
 <body>
@@ -58,16 +65,16 @@
                                     <a class="nav-link" href="/Client/NguoiDung/Index">Liên hệ</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="dangKy.html" id="navbarDropdown_1"
-                                           role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            Đăng ký
-                                        </a>
-                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
-                                            <a class="dropdown-item" href="/Client/DangKyTK/NguoiDung">Đăng ký thành viên</a>
-                                            <a class="dropdown-item" href="/Client/DangKyTK/DonVi">Đăng ký đối tác</a>
-                                            <a class="dropdown-item" href="/Client/DangKyTK/BenhVien">Đăng ký bệnh viện</a>
-                                        </div>
-                                    </li>
+                                    <a class="nav-link dropdown-toggle" href="dangKy.html" id="navbarDropdown_1"
+                                       role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Đăng ký
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
+                                        <a class="dropdown-item" href="/Client/DangKyTK/NguoiDung">Đăng ký thành viên</a>
+                                        <a class="dropdown-item" href="/Client/DangKyTK/DonVi">Đăng ký đối tác</a>
+                                        <a class="dropdown-item" href="/Client/DangKyTK/BenhVien">Đăng ký bệnh viện</a>
+                                    </div>
+                                </li>
                             </ul>
                         </div>
 
@@ -220,12 +227,15 @@
     <script src="~/Assets/client/js/contact.js"></script>
     <!-- custom js -->
     <script src="~/Assets/client/js/custom.js"></script>
+
+
     @RenderSection("ClientScript", false)
 </body>
 
 </html>
 
-
+@*<script type="text/javascript" src="~/Assets/Admin/scripts/main.js"></script>*@
+@*<script src="~/Assets/Admin/scripts/userController.js"></script>*@
 @*@{
         var session6 = (HiemMauNhanDao.Common.UserLogin)Session[HiemMauNhanDao.Common.CommonConstant.USER_SESSION];
     }
