--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Shared/_LeftMenu.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Shared/_LeftMenu.cshtml
@@ -10,7 +10,7 @@
             </li>
             <li class="app-sidebar__heading">Chức Năng Chính</li>
             <li>
-                <a href="/Admin/NhanVien/Index">
+                <a href="/Admin/QuanLyTK/Index">
                     <i class="metismenu-icon pe-7s-users"> </i>
                     Quản lý người dùng
                 </a>
