--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Shared/_LeftMenu.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Shared/_LeftMenu.cshtml
@@ -55,7 +55,7 @@
                     <i class="metismenu-icon pe-7s-user"></i>
                     Người dùng
                 </a>
-                <a href="https://localhost:44304/">
+                <a href="/LoginClient/Index">
                     <i class="metismenu-icon pe-7s-display2"></i>
                     Trang người dùng
                 </a>
