--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/BenhVien/EditBV.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/BenhVien/EditBV.cshtml
@@ -19,7 +19,6 @@
         <div class="form-group">
             <div class="col-md-10">
                 <label for="exampleText" class="">Tên bệnh viện</label>
-
                 @Html.EditorFor(model => model.TenBenhVien, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TenBenhVien, "", new { @class = "text-danger" })
             </div>
@@ -36,7 +35,6 @@
         <div class="form-group">
             <div class="col-md-10">
                 <label for="exampleText" class="">Số điện thoại</label>
-
                 @Html.EditorFor(model => model.soDTBV, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.soDTBV, "", new { @class = "text-danger" })
             </div>
@@ -49,20 +47,23 @@
                 @Html.ValidationMessageFor(model => model.diaChi, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        <div class="form-group">
-            <div class="col-md-10">
-                <label for="exampleFile" class="">Minh chứng</label><input name="file" id="exampleFile" type="file" class="form-control-file">
-
-            </div>
-        </div>
-
-
         <div class="form-group">
             <label for="exampleText" class="">Trạng thái</label>
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.trangThai, new[] { new SelectListItem { Text = "Hoạt động", Value = "True" }, new SelectListItem { Text = "không hoạt động", Value = "False" } }, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.trangThai, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-10">
+                <label for="exampleFile" class="">Minh chứng</label>
+                <input name="file" id="exampleFile" type="file" class="form-control-file">
+
+                @Html.EditorFor(model => model.minhChung, new { htmlAttributes = new { @class = "form-control-file", @type = "file" } })
+                @Html.ValidationMessageFor(model => model.minhChung, "", new { @class = "form-control-file" })
+
+
             </div>
         </div>
 
