--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/BenhVien/EditBV.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/BenhVien/EditBV.cshtml
@@ -60,8 +60,8 @@
                 <label for="exampleFile" class="">Minh chứng</label>
                 <input name="file" id="exampleFile" type="file" class="form-control-file">
 
-                @Html.EditorFor(model => model.minhChung, new { htmlAttributes = new { @class = "form-control-file", @type = "file" } })
-                @Html.ValidationMessageFor(model => model.minhChung, "", new { @class = "form-control-file" })
+                @*@Html.EditorFor(model => model.minhChung, new { htmlAttributes = new { @class = "form-control-file", @type = "file" } })
+                @Html.ValidationMessageFor(model => model.minhChung, "", new { @class = "form-control-file" })*@
 
 
             </div>
