--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/DotHiemMau/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/DotHiemMau/Index.cshtml
@@ -130,7 +130,7 @@
                         </td>
                         <td>
                             <button class="mb-2 mr-2 btn-transition btn btn-outline-info">
-                                @(item.trangThai == true ? "Active" : "Blocked")
+                                @(item.trangThai == true ? "Còn hạn" : "Hết hạn")
                             </button>
                         </td>
                         <td>
