--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/QuanLyTK/CreateTK.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/QuanLyTK/CreateTK.cshtml
@@ -1,4 +1,4 @@
-﻿@model Models.EF.TaiKhoan
+﻿@model Models.EF.ThongTinCaNhan
 
 @{
     ViewBag.Title = "CreateTK";
@@ -11,49 +11,73 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
- 
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            <div class="col-md-10">
-                <label for="exampleText" class="">Phân quyền</label>
-                @Html.DropDownList("IdQuyen", ViewBag.IdQuyen as SelectList, htmlAttributes: new { @class = "form-control" })
+<div class="form-horizontal">
 
-                @Html.ValidationMessageFor(model => model.idQuyen, "", new { @class = "text-danger" })
-            </div>
-        </div>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        <div class="col-md-10">
+            <label for="exampleText" class="">Phân quyền</label>
+            @Html.DropDownList("IdQuyen", ViewBag.IdQuyen as SelectList, htmlAttributes: new { @class = "form-control" })
 
-        <div class="form-group">
-            <div class="col-md-10">
-                <label for="exampleText" class="">Tài khoản</label>
-                @Html.EditorFor(model => model.userName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.userName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-10">
-                <label for="exampleText" class="">Mật khẩu</label>
-                @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control", @Type = "password" } })
-                @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-10">
-                <label for="exampleText" class="">Trạng thái</label>
-                @Html.DropDownListFor(model => model.trangThai, new[] { new SelectListItem { Text = "Kích hoạt", Value = "True" }, new SelectListItem { Text = "Khóa", Value = "False" } }, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.trangThai, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <button class="mt-2 btn btn-primary"> <i class="fa fa-save" type="submit"></i> Thêm</button>
-            </div>
+            @Html.ValidationMessageFor(model => model.idQuyen, "", new { @class = "text-danger" })
         </div>
     </div>
+
+    <div class="form-group">
+        <div class="col-md-10">
+            <label for="exampleText" class="">Tài khoản</label>
+            @Html.EditorFor(model => model.userName, new { htmlAttributes = new { @class = "form-control" } })
+
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-10">
+            <label for="exampleText" class="">Mật khẩu</label>
+            @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control", @Type = "password" } })
+            @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-10">
+            <label for="exampleText" class="">Họ tên</label>
+            @Html.EditorFor(model => model.hoTen, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-10">
+            <label for="exampleText" class="">Email</label>
+            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-10">
+            <label for="exampleText" class="">Số điện thoại</label>
+            @Html.EditorFor(model => model.soDT, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-10">
+            <label for="exampleText" class="">CCCD / CMND</label>
+            @Html.EditorFor(model => model.CCCD, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-10">
+            <label for="exampleText" class="">Trạng thái</label>
+            @Html.DropDownListFor(model => model.trangThai, new[] { new SelectListItem { Text = "Kích hoạt", Value = "True" }, new SelectListItem { Text = "Khóa", Value = "False" } }, new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.trangThai, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <button class="mt-2 btn btn-primary"> <i class="fa fa-save" type="submit"></i> Thêm</button>
+        </div>
+    </div>
+</div>
 }
 <div class="form-group">
     <div class="col-md-offset-2 col-md-10">
