--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/_leftMenu1.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/_leftMenu1.cshtml
@@ -36,6 +36,11 @@
             <ul class="list cat-list">
                 <li>
                     <a href="#" class="d-flex">
+                        <p>Cập nhật thông tin</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="d-flex">
                         <p>Xem lịch sử</p>
                     </a>
                 </li>
@@ -84,6 +89,11 @@
                 <li>
                     <a href="/NhanVienYTe/EditKQHM" class="d-flex">
                         <p>Cập nhật Kết quả hiến máu</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="d-flex">
+                        <p>Cập nhật thông tin</p>
                     </a>
                 </li>
             </ul>
@@ -145,7 +155,6 @@
                         <p>Cập nhật thông tin</p>
                     </a>
                 </li>
-
                 <li>
                     <a href="#" class="d-flex">
                         <p>Xem lịch sử</p>
