--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DangKyTK/BenhVien.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DangKyTK/BenhVien.cshtml
@@ -28,17 +28,17 @@
                         <h4 class="widget_title">Đăng ký</h4>
                         <ul class="list cat-list">
                             <li>
-                                <a href="/DangKyTK/NguoiDung" class="d-flex">
+                                <a href="/NguoiDung" class="d-flex">
                                     <p>Thành viên</p>
                                 </a>
                             </li>
                             <li>
-                                <a href="/DangKyTK/DonVi" class="d-flex">
+                                <a href="/DonVi" class="d-flex">
                                     <p>Đơn vị liên kết</p>
                                 </a>
                             </li>
                             <li>
-                                <a href="/DangKyTK/BenhVien" class="d-flex">
+                                <a href="/BenhVien" class="d-flex">
                                     <p>Bệnh viện</p>
                                 </a>
                             </li>
