--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DangKyTK/DonVi.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DangKyTK/DonVi.cshtml
@@ -19,6 +19,7 @@
         </div>
     </div>
 </section>
+
 <!-- breadcrumb start-->
 <section class="blog_area section_padding">
     <div class="container">
@@ -29,17 +30,17 @@
                         <h4 class="widget_title">Đăng ký</h4>
                         <ul class="list cat-list">
                             <li>
-                                <a href="/Client/DangKyTK/NguoiDung" class="d-flex">
+                                <a href="/DangKyTK/NguoiDung" class="d-flex">
                                     <p>Thành viên</p>
                                 </a>
                             </li>
                             <li>
-                                <a href="/Client/DangKyTK/DonVi" class="d-flex">
+                                <a href="/DangKyTK/DonVi" class="d-flex">
                                     <p>Đơn vị liên kết</p>
                                 </a>
                             </li>
                             <li>
-                                <a href="/Client/DangKyTK/BenhVien" class="d-flex">
+                                <a href="/DangKyTK/BenhVien" class="d-flex">
                                     <p>Bệnh viện</p>
                                 </a>
                             </li>
