--- a/HiemMauNhanDao/HiemMauNhanDao/Views/Shared/_Layout.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="/Client/Home/Index#"> <img src="~/Assets/client/img/logo6.png" alt="logo"> <span class="about_us_text">Hiến máu nhân đạo</span></a>
+                        <a class="navbar-brand" href="/Home/Index#"> <img src="~/Assets/client/img/logo6.png" alt="logo"> <span class="about_us_text">Hiến máu nhân đạo</span></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                 aria-expanded="false" aria-label="Toggle navigation">
@@ -56,23 +56,23 @@
                                     <a class="nav-link" href="/Home/Index#">Trang chủ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/DotHienMauClient/Index">Đợt hiến máu</a>
+                                    <a class="nav-link" href="/DotHienMau/Index">Đợt hiến máu</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="donViLienKet.html">Đơn vị liên kết</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="/NguoiDung/Index">Liên hệ</a>
-                                </li>
+                                </li>                              
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="dangKy.html" id="navbarDropdown_1"
+                                    <a class="nav-link dropdown-toggle" href="/DangKyTK/NguoiDung" id="navbarDropdown_1"
                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         Đăng ký
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
-                                        <a class="dropdown-item" href="/Client/DangKyTK/NguoiDung">Đăng ký thành viên</a>
-                                        <a class="dropdown-item" href="/Client/DangKyTK/DonVi">Đăng ký đối tác</a>
-                                        <a class="dropdown-item" href="/Client/DangKyTK/BenhVien">Đăng ký bệnh viện</a>
+                                        <a class="dropdown-item" href="/DangKyTK/NguoiDung">Đăng ký thành viên</a>
+                                        <a class="dropdown-item" href="/DangKyTK/DonVi">Đăng ký đối tác</a>
+                                        <a class="dropdown-item" href="/DangKyTK/BenhVien">Đăng ký bệnh viện</a>
                                     </div>
                                 </li>
                             </ul>
